k8s/manifests/nodejs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend-svc
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - name: http
      port: 3000 #exposed from dockerfile
      protocol: TCP
      targetPort: http
