k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  labels:
    app: backend
spec:
  rules:
    - http:
        paths:
          - path: / # root path to access docker image
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  name: http # maps 80 to exposed port
